[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/unit.gd" type="Script" id=1]
[ext_resource path="res://textures/unit_highlight_circle.png" type="Texture" id=2]
[ext_resource path="res://scripts/select_highlight.gd" type="Script" id=3]
[ext_resource path="res://models/units/mesh_carrot_temp.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/units/mesh_potato_temp.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/sfx/ui/unit_select.wav" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.1, 0.2 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
params_grow = true
params_grow_amount = 0.01
albedo_color = Color( 0.988235, 0.980392, 0.0431373, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 1, 1 )

[node name="unit" type="Spatial" groups=[
"unit",
]]
script = ExtResource( 1 )

[node name="mouse_detect_area" type="Area" parent="."]

[node name="collision_shape" type="CollisionShape" parent="mouse_detect_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 1 )

[node name="select_highlight" type="MeshInstance" parent="."]
visible = false
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null
script = ExtResource( 3 )

[node name="mesh_carrot_temp" parent="." instance=ExtResource( 4 )]
visible = false

[node name="mesh_potato_temp" parent="." instance=ExtResource( 5 )]
visible = false

[node name="sfx_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
[connection signal="mouse_entered" from="mouse_detect_area" to="." method="_on_mouse_detect_area_mouse_entered"]
[connection signal="mouse_exited" from="mouse_detect_area" to="." method="_on_mouse_detect_area_mouse_exited"]
